--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dev-dependencies]
-iced = { workspace = true, features = ["advanced", "tokio"] }
+iced = { workspace = true, features = ["advanced", "debug", "tokio"] }
 iced_animation_builder = { version = "0.1.0", path = "../animation_builder", features = ["derive"] }
 
 [[example]]
@@ -25,3 +25,7 @@ path = "animated_theme.rs"
 [[example]]
 name = "derived_animation"
 path = "derived_animation.rs"
+
+[[example]]
+name = "animated_bubble"
+path = "animated_bubble.rs"
