--- a/animation_builder/Cargo.toml
+++ b/animation_builder/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "iced_animation_builder"
+name = "iced_anim"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
-repository = "https://github.com/Brady-Simon/iced_animation_builder"
+repository = "https://github.com/Brady-Simon/iced_anim"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 iced.workspace = true
-iced_animation_builder_derive = { version = "0.1.0", path = "../animation_builder_derive", optional = true }
+iced_anim_derive = { version = "0.1.0", path = "../animation_builder_derive", optional = true }
 
 [features]
-derive = ["iced_animation_builder_derive"]
+derive = ["iced_anim_derive"]
