Change springs to store last update instant

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -37,3 +37,7 @@ path = "preview_motion.rs"
 [[example]]
 name = "animated_drawer"
 path = "animated_drawer.rs"
+
+[[example]]
+name = "nested_animations"
+path = "nested_animations.rs"
