--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 
 [dev-dependencies]
 iced = { workspace = true, features = ["advanced", "debug", "tokio"] }
-iced_anim = { version = "0.1.0", path = "../animation_builder", features = ["derive"] }
+iced_anim = { version = "0.1.0", path = "../iced_anim", features = ["derive"] }
 
 [[example]]
 name = "animated_color"
