--- a/iced_anim/Cargo.toml
+++ b/iced_anim/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "iced_anim"
 description = "A library for creating animations in Iced"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/Brady-Simon/iced_anim"
@@ -13,5 +13,5 @@ iced_anim_derive = { version = "0.1.0", path = "../iced_anim_derive", optional =
 serde = { version = "1.0", features = ["derive"], optional = true }
 
 [features]
-derive = ["iced_anim_derive"]
+derive = ["dep:iced_anim_derive"]
 serde = ["dep:serde"]
