Put widget module behind a feature flag

--- a/iced_anim/Cargo.toml
+++ b/iced_anim/Cargo.toml
@@ -15,3 +15,4 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 [features]
 derive = ["dep:iced_anim_derive"]
 serde = ["dep:serde"]
+widgets = []
