--- a/iced_anim/Cargo.toml
+++ b/iced_anim/Cargo.toml
@@ -8,12 +8,11 @@ repository = "https://github.com/Brady-Simon/iced_anim"
 readme = "../README.md"
 
 [dependencies]
-iced = { workspace = true, optional = true }
-iced_core.workspace = true
+iced.workspace = true
 iced_anim_derive = { version = "0.1.0", path = "../iced_anim_derive", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 
 [features]
 derive = ["dep:iced_anim_derive"]
 serde = ["dep:serde"]
-widgets = ["dep:iced"]
+widgets = []
