--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -8,8 +8,7 @@ publish = false
 
 [dev-dependencies]
 iced = { workspace = true, features = ["advanced", "debug", "tokio"] }
-serde = { version = "1.0", features = ["derive"] }
-iced_anim = { version = "0.1.0", path = "../iced_anim", features = ["derive", "serde", "widgets"] }
+iced_anim = { version = "0.1.0", path = "../iced_anim", features = ["derive", "widgets"] }
 
 [[example]]
 name = "animated_color"
