Add animated_canvas example

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dev-dependencies]
-iced = { workspace = true, features = ["advanced", "debug", "tokio"] }
+iced = { workspace = true, features = ["advanced", "canvas", "debug", "tokio"] }
 iced_anim = { version = "0.1.0", path = "../iced_anim", features = ["derive", "widgets"] }
 
 [[example]]
@@ -53,3 +53,7 @@ path = "custom_theme.rs"
 [[example]]
 name = "animated_widgets"
 path = "animated_widgets.rs"
+
+[[example]]
+name = "animated_canvas"
+path = "animated_canvas.rs"
