--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,7 @@
 resolver = "2"
 members = ["iced_anim", "iced_anim_derive", "examples"]
 
-[workspace.dependencies]
-iced = { version = "0.13", features = ["advanced", "svg"] }
+[workspace.dependencies.iced]
+git = "https://github.com/iced-rs/iced"
+rev = "97f1db3783dca5a4f60a9f89668613de4dfe9edd"
+features = ["advanced", "svg"]
