--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,5 @@
 resolver = "2"
 members = ["iced_anim", "iced_anim_derive", "examples"]
 
-[workspace.dependencies.iced]
-git = "https://github.com/pml68/iced"
-rev = "3a491669e7fecf21c261de63dcb1e8069063648f"
-features = ["advanced", "svg"]
+[workspace.dependencies]
+iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["advanced", "svg"] }
